# FLARE-AI

./: .gitignore  AGENTS.md  Optimize-Windows11-Clean.ps1  Windows-Optimization-Checklist.txt  Windows-Repair-Commands.cmd  get_url.py  package-lock.json  package.json  patch.js  patch2.js  patch3.js  patch4.js  render.yaml  reset_db.py
KNOWLEDGE/: architecture.md
REVIEWS/: REV_TKT-001.md  REV_TKT-002.md  REV_TKT-003.md  REV_TKT-004.md  REV_TKT-005.md  REV_TKT-006.md  REV_TKT-007.md  REV_TKT-009.md  REV_TKT-018.md  REV_TKT-023.md  REV_TKT-026.md  REV_TKT-028.md  REV_TKT-029.md  REV_TKT-031.md  REV_TKT-032.md  REV_TKT-033.md  REV_TKT-034.md  REV_TKT-035.md  REV_TKT-037.md  REV_TKT-038.md  REV_TKT-039.md  REV_TKT-041.md  REV_TKT-043.md  REV_TKT-044.md  REV_TKT-045.md  REV_TKT-046.md  REV_TKT-049.md  REV_TKT-050.md  REV_TKT-051.md  REV_TKT-052.md  REV_TKT-061.md  REV_TKT-069.md  REV_TKT-070.md  REV_TKT-071.md  REV_TKT-076.md  REV_TKT-087.md  REV_TKT-095.md  REV_TKT-096.md  REV_TKT-099.md  REV_TKT-101.md  (+2 more)
agents/: PROMPT_ALPHA.md  PROMPT_ANTIGRAVITY.md  PROMPT_BETA.md  PROMPT_CLAUDE.txt  PROMPT_DELTA.md  PROMPT_EPSILON.md  PROMPT_GAMMA.md  PROMPT_THETA.md  PROMPT_ZETA.md
backend/: .env.example  .env.production.example  .env.staging.example  .gcloudignore  AGENTS.md  Dockerfile  add_dummy_pages.py  check_bucket.py  check_db.py  check_dims.py  clean_dummy.py  db_cleanup.py  db_cleanup_raw.py  drop_index_alter.py  dump_prompt.py  fix_doc.py  flare_ai_os.db.bak  main.py  (+20 more)
desktop/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/tauri/src-tauri/src/: main.rs
(+431 files in other folders)
